Fixed section not wrapping child elements correctly on mobile

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -289,7 +289,6 @@ header#gallery {
 
 section {
   width: 100%;
-  height: 100vh;
   position: relative;
   z-index: 1;
 }
@@ -319,8 +318,15 @@ section#display {
 }
 
 section#project {
+  @media (min-width:1200px) {
   height: 100vh;
-  position: relative;
+    h1 {
+      margin-top: 0;
+    }
+    hr {
+      width: 80%;
+    }
+  }
   .bg {
     width: 100%;
     height: 100%;
@@ -352,8 +358,10 @@ section#project {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    @media (max-width: 1200px) {
-      margin-top: 200px;
+    @media (max-width:1200px) {
+      position: static;
+      top: 0;
+      transform: none;
     }
   }
   img {
@@ -402,14 +410,6 @@ section#project {
     }
     div.blue {
       background-color: @cyan-cont
-    }
-  }
-  @media (min-width:1200px) {
-    h1 {
-      margin-top: 0;
-    }
-    hr {
-      width: 80%;
     }
   }
   ul#tech-list,
